[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game/Invoked/Invoked.gd" type="Script" id=1]
[ext_resource path="res://Game/Invoked/Invoked.png" type="Texture" id=2]
[ext_resource path="res://Game/Invoked/AttackArea.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.63
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 23, 22, 21, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../AttackArea/AttackDetector:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.19, 0.37 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../AttackArea/AttackDetector:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.21, 0.28, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 84, -58 ), Vector2( 60, 12 ), Vector2( 84, -58 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 2, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.7
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56, 0.63 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Spawn"
length = 0.45
step = 0.09
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.18, 0.27, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 39, 60 )

[sub_resource type="CircleShape2D" id=6]

[node name="InvokedBody" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( -41.0289, -165.901 )
vframes = 4
hframes = 10
frame = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Attack = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )
anims/Spawn = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -56 )
shape = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 25, -5 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource( 3 )

[node name="AttackDetector" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 84, -58 )
shape = SubResource( 6 )
disabled = true

[node name="AttackRayCast" type="RayCast2D" parent="AttackArea"]
position = Vector2( 40, -50 )
cast_to = Vector2( 100, 0 )
collision_mask = 2

[connection signal="body_entered" from="AttackArea" to="AttackArea" method="_on_AttackArea_body_entered"]
